form_takima/TP-kube-02/api/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api
  name: api
spec:
  replicas: 4
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      securityContext:
        runAsUser: 1001
        runAsGroup: 1001
      containers:
      - image: registry.gitlab.com/takima-school/images/cdb/api:latest
        name: api
        resources:
          limits:
            memory: "256M"
            cpu: "2"
          requests:
            memory: "192M"
            cpu: "100m"  
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8080
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8080
        ports:
        - containerPort: 8080
      imagePullSecrets:
        - name: takima-school-registry
