form_takima/TP-kube-02/api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: api.nicolas-lecaille.takima.school
      http:
        paths:
          - backend:
              service:
                name: api-svc
                port:
                  number: 8080
            path: /
            pathType: Prefix
